--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
         <label for="logo-file">Selecionar Logotipo (Imagem):</label>
         <input type="file" id="logo-file" accept="image/*">
+        <p>Imagem exemplo:</p>
+        <img src="exemplo.png" alt="Imagem logotipo de exemplo para utilizar">
     </div>
 
     <!-- configs do menu gerado -->
